Feat: I created services and controlles for the static entities.